--- a/tp_cliente/src/fxmls/ClientesPendientes.fxml
+++ b/tp_cliente/src/fxmls/ClientesPendientes.fxml
@@ -65,7 +65,7 @@
       </FlowPane>
       <Pane layoutX="29.0" layoutY="34.0" prefHeight="47.0" prefWidth="618.0" style="-fx-border-radius: 10 0 0 0; -fx-background-radius: 10 0 0 0; -fx-background-color: #355c7D;">
          <children>
-            <Label alignment="CENTER" layoutY="9.0" prefHeight="30.0" prefWidth="618.0" text="BUSCAR CLIENTE" textFill="WHITE">
+            <Label alignment="CENTER" layoutY="9.0" prefHeight="30.0" prefWidth="618.0" text="CLIENTES PENDIENTES DE ACEPTACION" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="20.0" />
                </font>
@@ -79,58 +79,16 @@
       </FlowPane>
       <Pane layoutX="656.0" layoutY="35.0" prefHeight="601.0" prefWidth="681.0" style="-fx-background-color: #e1e5ed; -fx-background-radius: 0 10 0 0;">
          <children>
-            <GridPane layoutX="401.0" layoutY="87.0" prefHeight="28.0" prefWidth="239.0">
-               <columnConstraints>
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="203.0" minWidth="10.0" prefWidth="129.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="142.0" minWidth="10.0" prefWidth="35.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="190.0" minWidth="10.0" prefWidth="50.0" />
-               </columnConstraints>
-               <rowConstraints>
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-               </rowConstraints>
-               <children>
-                  <FlowPane alignment="CENTER" prefHeight="37.0" prefWidth="119.0" style="-fx-background-color: #c06c84;">
-                     <children>
-                        <Label alignment="CENTER" prefHeight="20.0" prefWidth="110.0" text="Total de pedidos" textFill="WHITE">
-                           <font>
-                              <Font name="System Bold" size="14.0" />
-                           </font>
-                        </Label>
-                     </children>
-                  </FlowPane>
-                  <FlowPane alignment="CENTER" prefHeight="37.0" prefWidth="88.0" style="-fx-border-color: #c06c84; -fx-border-width: 2 0 2 0; -fx-background-color: #ffffff;" GridPane.columnIndex="1">
-                     <children>
-                        <Label fx:id="lblCantPedidos" alignment="CENTER" prefHeight="17.0" prefWidth="42.0" text="15">
-                           <font>
-                              <Font size="14.0" />
-                           </font>
-                        </Label>
-                     </children>
-                  </FlowPane>
-                  <FlowPane alignment="CENTER" prefHeight="37.0" prefWidth="54.0" style="-fx-background-color: #c06c84; -fx-background-radius: 0 10 10 0;" GridPane.columnIndex="2">
-                     <children>
-                        <ImageView fitHeight="16.0" fitWidth="31.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@../img/eye-vector.png" />
-                           </image>
-                        </ImageView>
-                     </children>
-                  </FlowPane>
-               </children>
-               <effect>
-                  <DropShadow blurType="GAUSSIAN" />
-               </effect>
-            </GridPane>
             <Pane prefHeight="44.0" prefWidth="681.0" style="-fx-background-color: #355c7D; -fx-background-radius: 0 10 0 0;">
                <children>
-                  <Label alignment="CENTER" layoutY="9.0" prefHeight="30.0" prefWidth="635.0" text="FICHA DE CLIENTE" textFill="WHITE">
+                  <Label alignment="CENTER" layoutY="9.0" prefHeight="30.0" prefWidth="635.0" text="FICHA DE CLIENTE PENDIENTE" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="20.0" />
                      </font>
                   </Label>
                </children>
             </Pane>
-            <Label fx:id="lblIdCliente" layoutX="54.0" layoutY="78.0" prefHeight="94.0" prefWidth="271.0" text="#123456" underline="true">
+            <Label fx:id="lblIdCliente" layoutX="54.0" layoutY="78.0" prefHeight="94.0" prefWidth="304.0" text="ID1234" underline="true">
                <font>
                   <Font size="65.0" />
                </font>
@@ -162,6 +120,16 @@
                      </GridPane.margin>
                   </JFXTextField>
                   <JFXTextField fx:id="txtDireccion" editable="false" labelFloat="true" promptText="Direccion" GridPane.rowIndex="4">
+                     <GridPane.margin>
+                        <Insets left="20.0" right="20.0" />
+                     </GridPane.margin>
+                  </JFXTextField>
+                  <JFXTextField fx:id="txtNumero" editable="false" labelFloat="true" promptText="Numero" GridPane.rowIndex="5">
+                     <GridPane.margin>
+                        <Insets left="20.0" right="20.0" />
+                     </GridPane.margin>
+                  </JFXTextField>
+                  <JFXTextField fx:id="txtPiso" editable="false" labelFloat="true" promptText="Piso/Depto" GridPane.rowIndex="6">
                      <GridPane.margin>
                         <Insets left="20.0" right="20.0" />
                      </GridPane.margin>
@@ -202,17 +170,17 @@
                         <Insets left="20.0" right="20.0" />
                      </GridPane.margin>
                   </JFXTextField>
-                  <JFXTextField fx:id="txtLimitePrecio" editable="false" labelFloat="true" promptText="Limite de precio" GridPane.rowIndex="6">
+                  <JFXTextField fx:id="txtLimitePrecio" editable="false" labelFloat="true" promptText="Limite de precio" GridPane.columnIndex="1" GridPane.rowIndex="6">
                      <GridPane.margin>
                         <Insets left="20.0" right="20.0" />
                      </GridPane.margin>
                   </JFXTextField>
-                  <JFXTextField fx:id="txtCondicPago" editable="false" promptText="Condiciones de pago" GridPane.rowIndex="7">
+                  <JFXTextField fx:id="txtCondicPago" editable="false" promptText="Condiciones de pago" GridPane.columnIndex="1" GridPane.rowIndex="7">
                      <GridPane.margin>
                         <Insets left="20.0" right="20.0" />
                      </GridPane.margin>
                   </JFXTextField>
-                  <Label alignment="BOTTOM_CENTER" prefHeight="30.0" prefWidth="129.0" text="Datos financieros:" GridPane.rowIndex="5">
+                  <Label alignment="BOTTOM_CENTER" prefHeight="30.0" prefWidth="135.0" text="Datos financieros:" GridPane.columnIndex="1" GridPane.rowIndex="5">
                      <font>
                         <Font name="System Bold" size="15.0" />
                      </font>
@@ -220,26 +188,26 @@
                         <Insets left="20.0" />
                      </GridPane.margin>
                   </Label>
+                  <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.rowIndex="7">
+                     <children>
+                        <JFXButton fx:id="btnCancelar" buttonType="RAISED" onAction="#rechazarCliente" prefHeight="28.0" prefWidth="110.0" style="-fx-background-color: #ff5e5e;" text="Rechazar">
+                           <HBox.margin>
+                              <Insets right="20.0" top="5.0" />
+                           </HBox.margin>
+                        </JFXButton>
+                        <JFXButton fx:id="btnGuardar" buttonType="RAISED" onAction="#altaCliente" prefHeight="28.0" prefWidth="110.0" style="-fx-background-color: #d1ff8c;" text="Dar de alta">
+                           <HBox.margin>
+                              <Insets top="5.0" />
+                           </HBox.margin>
+                        </JFXButton>
+                     </children>
+                  </HBox>
                   <JFXTextField fx:id="txtGenero" editable="false" promptText="Genero" GridPane.columnIndex="1" GridPane.rowIndex="4">
                      <GridPane.margin>
                         <Insets left="20.0" right="20.0" />
                      </GridPane.margin>
                   </JFXTextField>
-                  <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="6">
-                     <children>
-                        <JFXButton fx:id="btnEditar" buttonType="RAISED" onAction="#editarCliente" prefHeight="25.0" prefWidth="110.0" ripplerFill="#ffd3d3" style="-fx-background-color: #d1ff8c;" text="Aceptar">
-                           <HBox.margin>
-                              <Insets left="10.0" />
-                           </HBox.margin>
-                        </JFXButton>
-                        <JFXButton fx:id="btnEliminar" buttonType="RAISED" onAction="#eliminarCliente" prefHeight="25.0" prefWidth="110.0" ripplerFill="#d07b7b" style="-fx-background-color: #ff5e5e;" text="Rechazar">
-                           <HBox.margin>
-                              <Insets left="10.0" />
-                           </HBox.margin>
-                        </JFXButton>
-                     </children>
-                  </HBox>
-                  <Label fx:id="lblIdCC" alignment="BOTTOM_CENTER" prefHeight="30.0" prefWidth="129.0" text="ID# " GridPane.rowIndex="5">
+                  <Label fx:id="lblIdCC" alignment="BOTTOM_CENTER" prefHeight="30.0" prefWidth="129.0" text="ID# " GridPane.columnIndex="1" GridPane.rowIndex="5">
                      <font>
                         <Font name="System Bold" size="15.0" />
                      </font>
