--- a/tp_cliente/src/fxmls/PedidosPendientes.fxml
+++ b/tp_cliente/src/fxmls/PedidosPendientes.fxml
@@ -227,7 +227,7 @@
                   </Label>
                </children>
             </GridPane>
-            <JFXButton fx:id="btnEnviar" layoutX="540.0" layoutY="292.0" onAction="#enviarPedido" prefHeight="31.0" prefWidth="127.0" style="-fx-background-color: #8ac96a;" text="Enviar pedido" textFill="WHITE">
+            <JFXButton fx:id="btnEnviar" layoutX="540.0" layoutY="292.0" prefHeight="31.0" prefWidth="127.0" style="-fx-background-color: #8ac96a;" text="Enviar pedido" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="15.0" />
                </font>
