--- a/tp_cliente/bin/fxmls/PedidosCompletos.fxml
+++ b/tp_cliente/bin/fxmls/PedidosCompletos.fxml
@@ -220,7 +220,7 @@
                         <Font name="System Bold" size="15.0" />
                      </font>
                   </Label>
-                  <Label fx:id="txtEstado" prefHeight="21.0" prefWidth="342.0" text="El pedido se encuentra listo" GridPane.columnIndex="1">
+                  <Label fx:id="txtEstado" prefHeight="21.0" prefWidth="342.0" text="--" GridPane.columnIndex="1">
                      <font>
                         <Font name="System Bold" size="15.0" />
                      </font>
