--- a/tp_cliente/bin/fxmls/PedidosPendientes.fxml
+++ b/tp_cliente/bin/fxmls/PedidosPendientes.fxml
@@ -220,14 +220,14 @@
                         <Font name="System Bold" size="15.0" />
                      </font>
                   </Label>
-                  <Label fx:id="txtEstado" prefHeight="21.0" prefWidth="342.0" text="El pedido se puede producir" GridPane.columnIndex="1">
+                  <Label fx:id="txtEstado" prefHeight="21.0" prefWidth="342.0" text="--" GridPane.columnIndex="1">
                      <font>
                         <Font name="System Bold" size="15.0" />
                      </font>
                   </Label>
                </children>
             </GridPane>
-            <JFXButton fx:id="btnEnviar" layoutX="540.0" layoutY="292.0" prefHeight="31.0" prefWidth="127.0" style="-fx-background-color: #8ac96a;" text="Enviar pedido" textFill="WHITE">
+            <JFXButton fx:id="btnEnviar" layoutX="540.0" layoutY="292.0" prefHeight="31.0" prefWidth="127.0" style="-fx-background-color: #8ac96a;" text="Aprobar" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="15.0" />
                </font>
@@ -235,7 +235,7 @@
                   <DropShadow blurType="GAUSSIAN" height="18.0" radius="8.5" width="18.0" />
                </effect>
             </JFXButton>
-            <JFXButton fx:id="btnCancelar" layoutX="436.0" layoutY="292.0" prefHeight="31.0" prefWidth="91.0" style="-fx-background-color: #ed6861;" text="Cancelar" textFill="WHITE">
+            <JFXButton fx:id="btnCancelar" layoutX="436.0" layoutY="292.0" prefHeight="31.0" prefWidth="91.0" style="-fx-background-color: #ed6861;" text="Rechazar" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="15.0" />
                </font>
