--- a/tp_cliente/bin/fxmls/ReclamosAlta.fxml
+++ b/tp_cliente/bin/fxmls/ReclamosAlta.fxml
@@ -91,7 +91,7 @@
             </JFXTextArea>
             <HBox prefHeight="100.0" prefWidth="200.0">
                <children>
-                  <JFXButton fx:id="btnLimpiar" buttonType="RAISED" onAction="#limpiarCampos" prefHeight="39.0" prefWidth="135.0" style="-fx-background-color: #ed6861;" text="Limpiar campos" textFill="WHITE">
+                  <JFXButton fx:id="btnLimpiar" buttonType="RAISED" disable="true" onAction="#limpiarCampos" prefHeight="39.0" prefWidth="135.0" style="-fx-background-color: #ed6861;" text="Limpiar campos" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="15.0" />
                      </font>
@@ -102,7 +102,7 @@
                         <Insets left="180.0" top="30.0" />
                      </HBox.margin>
                   </JFXButton>
-                  <JFXButton fx:id="btnEnviar" onAction="#enviarReclamo" prefHeight="39.0" prefWidth="135.0" style="-fx-background-color: #8ac96a;" text="Enviar reclamo" textFill="WHITE">
+                  <JFXButton fx:id="btnEnviar" disable="true" onAction="#enviarReclamo" prefHeight="39.0" prefWidth="135.0" style="-fx-background-color: #8ac96a;" text="Enviar reclamo" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="15.0" />
                      </font>
@@ -138,7 +138,7 @@
       </FlowPane>
       <Pane layoutX="26.0" layoutY="27.0" prefHeight="47.0" prefWidth="618.0" style="-fx-border-radius: 10 0 0 0; -fx-background-radius: 10 0 0 0; -fx-background-color: #355c7D;">
          <children>
-            <Label alignment="CENTER" layoutY="9.0" prefHeight="30.0" prefWidth="618.0" text="BUSCAR CLIENTE" textFill="WHITE">
+            <Label alignment="CENTER" layoutY="9.0" prefHeight="30.0" prefWidth="618.0" text="SELECCIONAR CLIENTE" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="20.0" />
                </font>
@@ -199,6 +199,11 @@
       <Label layoutX="988.0" layoutY="71.0" text="Generar un nuevo reclamo">
          <font>
             <Font name="System Bold" size="27.0" />
+         </font>
+      </Label>
+      <Label fx:id="lblIdCliente" layoutX="999.0" layoutY="145.0" text="ID Cliente:" textFill="#f3f3f3" visible="false">
+         <font>
+            <Font name="System Bold" size="20.0" />
          </font>
       </Label>
    </children>
