--- a/tp_cliente/bin/fxmls/SideMenu_1.fxml
+++ b/tp_cliente/bin/fxmls/SideMenu_1.fxml
@@ -24,14 +24,6 @@
             <JFXHamburger layoutX="14.0" layoutY="12.0" stylesheets="@../styles/hambstyle2.css" />
          </children>
       </Pane>
-      <JFXButton fx:id="btnResumen" alignment="CENTER_RIGHT" buttonType="RAISED" minHeight="28.0" onAction="#changeBody" prefHeight="28.0" prefWidth="250.0" ripplerFill="BLACK" style="-fx-background-color: #99b89b;" text="Resumen de sucursal" textAlignment="RIGHT" textFill="WHITE">
-         <font>
-            <Font name="System Bold" size="14.0" />
-         </font>
-         <VBox.margin>
-            <Insets top="15.0" />
-         </VBox.margin>
-      </JFXButton>
       <Label text="Clientes" textFill="WHITE">
          <VBox.margin>
             <Insets top="10.0" />
@@ -106,7 +98,7 @@
             <Insets top="3.0" />
          </VBox.margin>
       </JFXButton>
-      <Label text="Novedades" textFill="WHITE">
+      <Label text="Novedades" textFill="#838383">
          <VBox.margin>
             <Insets top="10.0" />
          </VBox.margin>
@@ -117,7 +109,7 @@
             <Font name="System Bold" size="15.0" />
          </font>
       </Label>
-      <JFXButton fx:id="btnAltaPrenda" alignment="CENTER_RIGHT" buttonType="RAISED" minHeight="28.0" onAction="#changeBody" prefHeight="28.0" prefWidth="250.0" ripplerFill="BLACK" style="-fx-background-color: #c06C84;" text="Generar nueva novedad" textAlignment="RIGHT">
+      <JFXButton fx:id="btnAltaPrenda" alignment="CENTER_RIGHT" buttonType="RAISED" disable="true" minHeight="28.0" onAction="#changeBody" prefHeight="28.0" prefWidth="250.0" ripplerFill="BLACK" style="-fx-background-color: #838383;" text="Generar nueva novedad" textAlignment="RIGHT">
          <font>
             <Font size="14.0" />
          </font>
